--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,16 @@
 {
-  "name": "Laravel Codespace",
-  "dockerComposeFile": "docker-compose.yml",
-  "service": "app",
-  "workspaceFolder": "/var/www/html",
-  "extensions": [
-    "ms-azuretools.vscode-docker",
-    "bmewburn.vscode-intelephense-client",
-    "junstyle.php-cs-fixer",
-    "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode"
-  ],
-  "postCreateCommand": "composer install && php artisan migrate --seed"
+    "name": "Laravel Codespace",
+    "dockerComposeFile": ["../docker-compose.yml"],
+    "service": "app",
+    "workspaceFolder": "/workspace",
+    "extensions": [
+        "ms-azuretools.vscode-docker",
+        "bmewburn.vscode-intelephense-client",
+        "mehedidracula.php-namespace-resolver",
+        "EditorConfig.EditorConfig"
+    ],
+    "settings": {
+        "terminal.integrated.defaultProfile.linux": "bash",
+        "php.validate.executablePath": "/usr/local/bin/php"
+    }
 }
