--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,17 +3,22 @@
     "dockerComposeFile": ["docker-compose.yml"],
     "service": "app",
     "workspaceFolder": "/workspace",
-    "extensions": [
-        "ms-azuretools.vscode-docker",
-        "bmewburn.vscode-intelephense-client",
-        "mehedidracula.php-namespace-resolver",
-        "EditorConfig.EditorConfig"
-    ],
-    "settings": {
-        "terminal.integrated.defaultProfile.linux": "bash",
-        "php.validate.executablePath": "/usr/local/bin/php"
+    "customizations": {
+        "vscode": {
+            "settings": {
+                "terminal.integrated.defaultProfile.linux": "bash",
+                "php.validate.executablePath": "/usr/local/bin/php"
+            },
+            "extensions": [
+                "ms-azuretools.vscode-docker",
+                "bmewburn.vscode-intelephense-client",
+                "mehedidracula.php-namespace-resolver",
+                "EditorConfig.EditorConfig"
+            ]
+        }
     },
     "mounts": [
         "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
     ]
 }
+
